<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/orangeTextViewText"
            android:textColor="#FFF" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/greenTextViewText"
            android:textColor="#000"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/blueTextViewText"
            android:textColor="#FFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.1" >
        </Space>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="@string/this_is_a_button"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="25sp"
            android:paddingBottom="25sp"
            android:backgroundTint="@color/darkerBlue"
            android:textColor="#000"

            />
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.1" >
        </Space>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:src="@drawable/cake"
            android:gravity="center_horizontal|center_vertical"
            android:contentDescription="cake" />
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.1" >
        </Space>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.89"
            android:text="@string/this_is_a_green_button"
            android:backgroundTint="@color/darkerGreen"
            android:textColor="#000"
            android:paddingTop="25sp"
            android:paddingBottom="25sp"
            android:gravity="center_horizontal|center_vertical"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.1" >
        </Space>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellowEditText"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/this_is_a_edit_text"
            android:inputType="text"
            android:autofillHints="username" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/this_is_another_edit_text"
            android:inputType="text"
            android:autofillHints="password" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkerBlue"
        android:paddingLeft="5dp">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/notify_me" />

        <Switch
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/auto_backup"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/darkerBlue"
        android:paddingLeft="5dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="3"
            android:stepSize="1"
            android:colorControlNormal="#6BAFA9"
            android:colorControlActivated="#E0115F"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="YES" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NO" />
    </RadioGroup>
    </LinearLayout>
</LinearLayout>

